Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-19689

Textinput: last word inputted was duplicated after press "Password" button

XMLWordPrintable

    • 57092a111a314a3cafdbc5d8302cf716b6bbda36

      Reproduce Steps:
      1. launch qmlviewer and load textinput.qml;
      2. press green textinput field;
      3. input "Hello ", then input "World"
      4. before the line under "World" disappearing, press the button with a green hook on the left bottom of the screen;
      5. press "Password" button
      6. press "Normal" button

      Expected Result:
      After Step 5, 11 asterisks should be displayed in the green textinput field. After Step 6, "Hello World" should be displayed in the green textinput field.

      Actual Result:
      After Step 5, 16 asterisks are displayed. After Step 6, "Hello WorldWorld" is displayed, the last world is duplicated.

        1. main.cpp
          1 kB
        2. textinput.gif
          textinput.gif
          216 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            samimeri Sami Merila (Inactive)
            tingma Ting Ma (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes