Last word inputted was duplicated after input method hints changed

If input hints change call reset() to avoid duplication of predicted
text into input widget. Otherwise input widget will commit the
predicted word AND whatever the user has so far typed.

Task-number: QTBUG-19689
Reviewed-by: Miikka Heikkinen